# elektroneats-api

./: Cargo.toml  readme.md
docs/: index.html  order-docs.txt  redoc-static.html  swagger.json  swagger.yaml
entity/: Cargo.toml
entity/src/: custom_impl.rs  dinner.rs  dinner_impl.rs  dinner_orders.rs  extras.rs  extras_dinner.rs  extras_order.rs  lib.rs  menu_info.rs  mod.rs  model_enums.rs  order.rs  prelude.rs  sea_orm_active_enums.rs  shop.rs  shop_orders.rs  user.rs  user_dinner_orders.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230324_173454_dinners.rs  m20230324_174906_alter_user.rs  m20230324_175003_orders.rs  m20230324_183520_dinner_orders.rs  m20230324_183902_extras_indirect.rs  m20230324_193547_cleanup.rs  m20230324_193952_user_dinner_orders.rs  m20230324_194709_relations.rs  m20230324_201744_soup.rs  m20230402_083722_last_update.rs
src/: appstate.rs  enums.rs  errors.rs  jwt_auth.rs  lib.rs  main.rs  scraper.rs
src/routes/: admin.rs  menu.rs  mod.rs  order.rs  payment.rs  structs.rs  users.rs
static/admin/: index.html
static/admin/assets/: index-1eeded46.css  index-2491d1ea.js  index-4b7354be.js  index-fde36465.css
static/kantyna/: index.html
