[package]
name = "kantyna-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.24"
scraper = { version = "0.15.0", features = ["atomic"] }
ureq = "2.6.2"
dotenvy = "0.15.6"
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
serde = { version = "1.0.158", features = ["derive"] }

[dependencies.sea-orm]
version = "0.11.0" # sea-orm version
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-mysql",
]

[workspace]
members = [".", "entity", "migration"]
