[package]
name = "kantyna-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.24"
scraper = { version = "0.15.0", features = ["atomic"] }
ureq = "2.6.2"
dotenvy = "0.15.6"
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
serde = {version = "1.0.158", features = ["derive"]}
bcrypt = "0.14.0"
nanoid = "0.4.0"
lettre = { version = "0.10.3", features = ["smtp-transport"] }
jsonwebtoken = "8"
derive_more = "0.99.17"
serde_json = "1.0.94"
async-std = "1.12.0"

[dependencies.sea-orm]
version = "0.11.0" # sea-orm version
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-mysql",
]

[workspace]
members = [".", "entity", "migration"]
